fixed past issues on mobile

--- a/src/css/countdown.css
+++ b/src/css/countdown.css
@@ -32,8 +32,8 @@
 	-webkit-text-stroke-width: 2px;
 	-webkit-text-stroke-color: white;
 
-    /* animation: expansion calc(var(--animation-speed)/10) ease infinite;
-    animation-direction: normal; */
+    animation: expansion calc(var(--animation-speed)/5) ease infinite;
+    animation-direction: normal;
 }
 #dim-1{
     animation-delay: 500ms;
@@ -53,13 +53,14 @@
 
 @keyframes expansion{
     0%{
-        transform:scaleX(100%);
+        transform:SkewX(0deg);
     }
-    90%{
-        transform:scaleX(300%);
+    
+    50%{
+        transform:SkewX(20deg);
     }
     100%{
-        transform:scaleX(100%);
+        transform:SkewX(0deg);
     }
 }
 
@@ -107,7 +108,8 @@
         -webkit-text-stroke-color: black;
     }
     .dimension{
-        animation-duration: calc(var(--animation-speed)/11);
+        animation-duration: calc(var(--animation-speed)/5);
+        font-size:50vw;
     }
     .t-minus{
         font-size: 15vw;
